# AKASimulator

./: .coderabbit.yaml  .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  firmware.debugmap  index.html  main.c.html  script.sh  startup.s.html  testpath.tp
aka_simulator/: CMakeLists.txt
aka_simulator/inc/: ELFLoader.hpp  EmulationCore.hpp  Emulator.hpp  ExecutionLogger.hpp  MemoryManager.hpp  MemoryMap.hpp  STM32F103C8T6Emulator.hpp  Utils.hpp
aka_simulator/src/: ELFLoader.cpp  EmulationCore.cpp  Emulator.cpp  ExecutionLogger.cpp  MemoryManager.cpp  MemoryMap.cpp  STM32F103C8T6Emulator.cpp  main.cpp
aka_test_report_generator/: Generator  Generator.cpp
akas_generator/test_driver/: test_driver_template.txt
akas_generator/test_reporter/: CMakeLists.txt
akas_generator/test_reporter/inc/: HtmlGenerator.hpp  JsonParser.hpp  LogParser.hpp  ReportData.hpp  TestReportGenerator.hpp
akas_generator/test_reporter/src/: HtmlGenerator.cpp  JsonParser.cpp  LogParser.cpp  TestReportGenerator.cpp  main.cpp
akas_output/test_report/: # INFO_ aka_sim_writer_u32 called with value.html  aka_sim_writer_u32 called with value.html  index.html  main.c.html  startup.s.html  test_driver_uut.c.html
akas_reporter/: Generator
akas_reporter/test_report_generator/: Generator.cpp
akas_simulator/: CMakeLists.txt
akas_simulator/inc/: AddressMapper.hpp  ELFLoader.hpp  EmulationCore.hpp  Emulator.hpp  ExecutionLogger.hpp  MemoryMap.hpp  SimulationLogRefactor.hpp  StubManager.hpp  Utils.hpp
akas_simulator/src/: AddressMapper.cpp  ELFLoader.cpp  EmulationCore.cpp  Emulator.cpp  ExecutionLogger.cpp  MemoryManager.cpp  MemoryMap.cpp  SimulationLogRefactor.cpp  StubManager.cpp  Utils.cpp  main.cpp
akas_test_driver/: firmware.elf
akas_test_driver/akas_source/: main.c
akas_test_driver/toolchain/: gcc-arm-none-eabi.cmake
akas_test_driver/toolchain/stm32f103c8t6/: linker.ld
akas_working_space/akas_output/test_report/: index.html  startup.s.html  test_driver_uut.c.html
akas_working_space/akas_test_driver/: firmware.elf  test_driver_uut.c
akas_working_space/emulation_log/: emulation.tp  emulation.trc
akas_working_space/execution-results/: emulation.trc
akas_working_space/output/test_report/: index.html  main.c.html  startup.s.html  test_driver_uut.c.html
akas_working_space/test-paths/: emulation.tp
akas_working_space/test_case/: uut_int_int_charmul_MyStructmul_intmul_size_t_manual_0.json
akas_working_space/test_driver/: CMakeLists.txt  firmware.elf  firmware.s  stub.h  stub_info.txt  test_driver_uut.c
akas_working_space/test_driver/akas_source/: main.c  startup.s
akas_working_space/test_driver/toolchain/: clang-arm-none-eabi.cmake  clang-riscv32-none-elf.cmake
akas_working_space/test_report/: index.html  main.c.html  startup.s.html
akas_working_space/test_report/styles/: styles.css
design/: detail_flow.txt  flowchart.txt  sequence.txt
elf/: CMakeLists.txt  firmware.elf  main.elf
elf/input_source/: main.c
elf/toolchain/stm32f103c8t6/: linker.ld
elf_builder/: firmware.elf
elf_builder/input_source/: main.c  startup.s
elf_builder/toolchain/stm32f103c8t6/: linker.ld
include/: elf_loader.hpp  simulator.hpp  stm32f103.hpp
output/test_report/: index.html  main.c.html  startup.s.html
simulator/: CMakeLists.txt
simulator/app/: AKASimulator.cpp  AKASimulator.hpp  main.cpp
simulator/include/simulator/: Types.hpp
simulator/src/architecture/: ArchitectureFactory.cpp  ArchitectureFactory.hpp  CMakeLists.txt  Descriptors.hpp  IArchitecture.hpp  README.md
simulator/src/architecture/arm/: ARMCortexM3.hpp
simulator/src/architecture/arm/chips/: STM32F103C8T6.hpp  STM32F407VG.hpp
simulator/src/core/: ArchitectureMapper.hpp  CMakeLists.txt  SimulationEngine.cpp  SimulationEngine.hpp
simulator/src/core/errors/: ErrorDetector.cpp  ErrorDetector.hpp
simulator/src/core/hooks/: HookDispatcher.cpp  HookDispatcher.hpp
simulator/src/core/loader/: ELFLoader.cpp  ELFLoader.hpp
simulator/src/core/memory/: MemoryManager.cpp  MemoryManager.hpp
simulator/src/core/stubs/: StubManager.cpp  StubManager.hpp
simulator/src/core/tracer/: SimulationTracer.cpp  SimulationTracer.hpp
simulator/src/io/: CMakeLists.txt
simulator/src/io/logging/: CompositeLogger.hpp  ConsoleLogger.cpp  ConsoleLogger.hpp  FileLogger.cpp  FileLogger.hpp  ILogger.hpp
simulator/src/io/utils/: FileUtils.hpp  StringUtils.hpp  Symbolizer.cpp  Symbolizer.hpp
simulator/src/io/writers/: IOutputWriter.hpp  ResultWriter.cpp  ResultWriter.hpp  SimulationLogWriter.cpp  SimulationLogWriter.hpp  TestPathWriter.cpp  TestPathWriter.hpp  TraceFileWriter.cpp  TraceFileWriter.hpp
simulator/tests/: README.md  test_step1.cpp  test_step2.cpp  test_step3_1_elfloader.cpp  test_step3_2_memory.cpp  test_step3_3_engine.cpp  test_step3_4_output.cpp
src/: CMakeLists.txt  elf_loader.cpp  main.cpp  simulator.cpp
test_output/: testpath.tp  trace.trc
